[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aerospike-langgraph-checkpointer"
version = "0.1.0"
description = "Aerospike-based checkpoint saver for LangGraph"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Jagrut Nemade", email = "jagrutjnemade.6p10@gmail.com" },
  { name = "Harin Avvari", email = "harinsub@gmail.com" }
]

dependencies = [
  "langgraph>=1.0.2",
  "aerospike>=18.0.0",
]

[tool.setuptools]
packages = ["aerospike_langgraph"]
